--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
-    "react-native-safe-area-context": "^4.10.1"
+    "react-native-dialog": "^9.3.0",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-uuid": "^2.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
