--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.14",
-    "expo-status-bar": "~1.11.1",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "expo": "^51.0.0",
+    "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "0.74.1",
     "react-native-dialog": "^9.3.0",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-uuid": "^2.0.2"
