--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "expo": "^51.0.0",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.1",
+    "react-native": "^0.74.3",
     "react-native-dialog": "^9.3.0",
-    "react-native-safe-area-context": "^4.10.1",
+    "react-native-safe-area-context": "^4.10.5",
     "react-native-uuid": "^2.0.2"
   },
   "devDependencies": {
