--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "axios": "^1.7.3",
     "expo": "^51.0.0",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
